<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="html_start">"&lt;!DOCTYPE HTML PUBLIC -//W3C//DTD HTML 4.01//EN> 
&lt;html> 
&lt;head> 
&lt;meta http-equiv=Content-type content=text/html;charset=UTF-8> 
&lt;title>%1$s&lt;/title> 
&lt;/head> 
&lt;body> 
&lt;h1>%1$s&lt;/h1> 
"</string>
    <string name="html_end">"
&lt;address>%s&lt;/address> 
&lt;/body> 
&lt;/html>"</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="app_name">Simple Calorie Count</string>
    <string name="label_total">Total</string>
    <string name="label_remaining">Remaining</string>
    <string name="footer_text">Add Item</string>
    <string name="menu_item_add">Add Item</string>
    <string name="menu_item_duplicate_last">Add Another</string>
    <string name="menu_item_stats">Statistics</string>
    <string name="menu_item_manage">Manage</string>
    <string name="menu_item_export">Export HTML file</string>
    <string name="menu_item_backup">Backup to SD card</string>
    <string name="menu_item_restore">Restore from SD card</string>
    <string name="menu_item_hide">Remove suggestions</string>
    <string name="menu_item_purge">Delete old entries</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_edit">Edit Item</string>
    <string name="menu_item_duplicate">Add Another</string>
    <string name="menu_item_delete">Delete Item</string>
    <string name="pref_calorie_target">Calorie Target</string>
    <string name="pref_no_target">Not set</string>
    <string name="pref_target_is_minimum">Target is Minimum</string>
    <string name="pref_target_is_minimum_summary">Select this if you are trying to gain weight.</string>
    <string name="pref_show_remaining">Show Remaining Calories</string>
    <string name="pref_show_remaining_summary_disabled">Requires a calorie target to be set.</string>
    <string name="pref_show_remaining_summary_unchecked">Currently showing total calories.</string>
    <string name="pref_show_remaining_summary_checked">Un-check to show total calories.</string>
    <string name="pref_order_by_date">Auto-complete by Date</string>
    <string name="pref_order_by_date_summary">List most recent first in the Add Item auto-complete.</string>
    <string name="pref_day_offset">Day Offset</string>
    <string name="pref_day_offset_summary">Which date to show initially in the Add By Day list.</string>
    <string name="pref_light_theme">Use a Light Background</string>
    <string name="pref_light_theme_summary">This will take effect next time you start the app.</string>
    <string name="title_add_item">Add Item</string>
    <string name="title_edit_item">Edit Item</string>
    <string name="title_manage_db">Manage DB - Simple Calorie Count</string>
    <string name="tab_edit">Add/Find</string>
    <string name="tab_by_date">Recent</string>
    <string name="tab_by_name">By Name</string>
    <string name="tab_by_day">By Day</string>
    <string name="pick_list_empty">"Previous entries will be listed here after you've added some."</string>
    <string name="pick_list_day_empty">Nothing was logged on this date.</string>
    <string name="label_name">"Food or
Activity"</string>
    <string name="label_value">Calories</string>
    <string name="label_negative_for_exercise">Enter a negative number to record calories burned by exercise.</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete Item</string>
    <string name="button_select_none">✓ None</string>
    <string name="button_select_all">✓ All</string>
    <string name="calculator_use_result">Use Result</string>
    <string name="stats_no_target_message">Set a calorie target to get a more useful report.</string>
    <string name="stats_targets_heading">Daily Targets</string>
    <string name="stats_averages_heading">Averages</string>
    <string name="stats_average_7">Last 7 days</string>
    <string name="stats_average_30">Last 30 days</string>
    <string name="stats_average_365">Last Year</string>
    <string name="stats_average_all">All Time</string>
    <string name="title_pre_backup">Backup</string>
    <string name="title_restore_files">Select a backup</string>
    <string name="title_restore_confirm">Confirm Restore</string>
    <string name="title_success">Done</string>
    <string name="title_fail">Failure</string>
    <string name="title_no_storage">Failure</string>
    <string name="message_pre_backup">"Your diary will be backed up to '%s'."</string>
    <string name="message_restore_confirm">"Your current diary will be overwritten with '%s'. Continue?"</string>
    <string name="message_backup_success">"Your diary was backed up to '%s'."</string>
    <string name="message_backup_fail">The backup FAILED.</string>
    <string name="message_restore_success">Restore complete.</string>
    <string name="message_restore_fail">The restore operation FAILED.</string>
    <string name="message_no_storage">External storage is not available. Unable to continue.</string>
    <string name="title_pre_export">Export</string>
    <string name="message_export_success">"Your diary has been written to '%s' on the SD card."</string>
    <string name="message_export_fail">The export FAILED.</string>
    <string name="message_no_backups">No backups were found on the SD Card.</string>
    <string name="message_restored_db_invalid">The selected backup file appears to be invalid.</string>
    <string name="message_working">Working…</string>
    <string name="hide_usage">Select items to remove from the suggestion lists.</string>
    <string name="title_pre_purge">Delete everything older than…</string>
    <string name="title_purge_confirm">Confirm Deletions</string>
    <string name="message_purge_confirm">%s records will be deleted.</string>
    <string name="sd_export_dir">SimpleCalorieCount</string>
    <string name="html_title">Diet Diary</string>
    <string name="html_footer">Generated by Simple Calorie Count on Android.</string>
</resources>
