<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:numeric="integer" android:title="@string/pref_calorie_target" android:key="calorie_target" android:defaultValue="0" />
    <CheckBoxPreference android:title="@string/pref_target_is_minimum" android:key="target_is_minimum" android:summary="@string/pref_target_is_minimum_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/pref_show_remaining" android:key="show_remaining" android:summary="@string/pref_show_remaining_summary_disabled" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/pref_order_by_date" android:key="order_by_date" android:summary="@string/pref_order_by_date_summary" android:defaultValue="true" />
    <ListPreference android:entries="@array/pref_day_offset_entries" android:title="@string/pref_day_offset" android:key="day_offset" android:summary="@string/pref_day_offset_summary" android:defaultValue="_1" android:entryValues="@array/pref_day_offset_values" />
    <CheckBoxPreference android:title="@string/pref_light_theme" android:key="light_theme" android:summary="@string/pref_light_theme_summary" android:defaultValue="false" />
</PreferenceScreen>