<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_add" android:id="@id/menu_item_add" android:title="@string/menu_item_add" />
    <item android:icon="@drawable/ic_menu_duplicate" android:id="@id/menu_item_duplicate" android:title="@string/menu_item_duplicate_last" />
    <item android:icon="@drawable/ic_menu_stats" android:id="@id/menu_item_stats" android:title="@string/menu_item_stats" />
    <item android:icon="@drawable/ic_menu_manage" android:id="@id/menu_item_manage" android:title="@string/menu_item_manage">
        <menu>
            <item android:id="@id/menu_item_export" android:title="@string/menu_item_export" />
            <item android:id="@id/menu_item_backup" android:title="@string/menu_item_backup" />
            <item android:id="@id/menu_item_restore" android:title="@string/menu_item_restore" />
            <item android:id="@id/menu_item_hide" android:title="@string/menu_item_hide" />
            <item android:id="@id/menu_item_purge" android:title="@string/menu_item_purge" />
        </menu>
    </item>
    <item android:icon="@drawable/ic_menu_settings" android:id="@id/menu_item_settings" android:title="@string/menu_item_settings" />
</menu>