<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow>
            <TextView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3.0sp" android:text="@string/label_name" />
            <AutoCompleteTextView android:id="@id/name_autocomplete" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="textFilter" android:imeOptions="actionNext" />
        </TableRow>
        <TableRow android:baselineAligned="false">
            <TextView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3.0sp" android:text="@string/label_value" />
            <EditText android:id="@id/value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:inputType="numberSigned" />
            <Button android:id="@id/launchCalculatorButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:drawableLeft="@drawable/ic_calculator_button" />
        </TableRow>
    </TableLayout>
    <View android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:orientation="horizontal" android:id="@id/button_panel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <Button android:id="@id/edit_delete" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_delete" android:layout_weight="1.0" />
        <Button android:id="@id/edit_cancel" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_cancel" android:layout_weight="1.0" />
        <Button android:id="@id/edit_confirm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>